<?xml version="1.0" encoding="utf-8"?>
<resources>
    <array name="item_list">
        <item>item</item>
        <item>item</item>
        <item>item</item>
        <item>item</item>
        <item>item</item>
    </array>

</resources>